--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,40 @@
+WiRoc
+=====
+Patch the BLE fails, add delay to the redo when fails
+The status light shouldn't blink when BLE fails, fail the service also?
 
 App
 ===
-Add one-way option for connecting to samlingsboxar, srr dongles [WiRoc Python Done, app remaining]
-add RSSI to test punches
+Make app work with old wiroc version
+
+
+Test RX Gain option (didn't see any difference in first test, but not sure if test was ok, RSSI is same)
+Add HW version file
+Add Settings file (for pesisting devicename, potentially other settings)
+
+Done
+----
+X Add one-way option for connecting to samlingsboxar, srr dongles [WiRoc Python Done, app remaining]
+X add RSSI to test punches
+
+possible HW enhancments
+-----------------------
+RS232 Serialport (use TTL->RS232 converter embedded in R232Connector)
+  -- Need to move GPIOA0-GPIO3 pins to GPIOC0-3 (GPIOA0 = TX, GPIOA1 = RX)
+RTC (realtime clock)
+Make the PCB the size and shape of the box
+Move the Rx and Tx LEDs together, use different colors
+Reroute SDA, SCK to the display
+Test resistor in series with button to see if we can get it not triggering under water
+    -- Gummiknappen ~50kohm
+    -- vitknapp ~30+kohm
+    -- svartknapp ~35kohm
+-> 51 kOhm fungerar (51+35kohm - 86 fungerar inte)
+-> 31 kOhm fungerar (31+35kohm - 66 fungerar inte)
+-> 26 kOhm fungerar (26+35kohm - 61 fungerar inte)
+===> Seem to only be a problem when the antennaconnector is under water too, so shouldnt be an issue in real life. Even though, change the resistor from 1K to 24Kohm
+
+
 
 IDs
 ----
