--- a/todo.txt
+++ b/todo.txt
@@ -2,20 +2,20 @@ WiRoc
 =====
 Patch the BLE fails, add delay to the redo when fails
 The status light shouldn't blink when BLE fails, fail the service also?
+Add HW version file
+Add Settings file (for pesisting devicename, potentially other settings)
+
 
 App
 ===
 Make app work with old wiroc version
 
 
-Test RX Gain option (didn't see any difference in first test, but not sure if test was ok, RSSI is same)
-Add HW version file
-Add Settings file (for pesisting devicename, potentially other settings)
-
 Done
 ----
 X Add one-way option for connecting to samlingsboxar, srr dongles [WiRoc Python Done, app remaining]
 X add RSSI to test punches
+X Test RX Gain option (didn't see any difference in first test, but not sure if test was ok, RSSI is same. Dorji says enable can have small advantage)
 
 possible HW enhancments
 -----------------------
