--- a/todo.txt
+++ b/todo.txt
@@ -6,7 +6,7 @@ WiRoc
 App
 ===
 Show repeater/sender/receiver somewhere
-Change to use 'single' BLE service to speed up connection
+
 
 
 Done
@@ -19,6 +19,7 @@ x Add Settings file (for pesisting devicename, potentially other settings)
 x The status light shouldn't blink when BLE fails, fail the service also?
 x Patch the BLE fails, add delay to the redo when fails
 x Make app work with old wiroc version
+x Change to use 'single' BLE service to speed up connection
 
 possible HW enhancments
 -----------------------
