--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,6 @@
 WiRoc
 =====
 
- - BT address 6 bytes: REG 04-0FH: Data Cache
- hciconfig hci0 down
- sudo btmgmt public-addr B0:02:47:00:D7:6D
- hciconfig hci0 up
- In startup script check AXP209 for bt address, then check settings.yaml and actual bt address.
- If AXP209 has address then use it and put it in settings
- If AXP209 is empty but settings.yaml has then write it to AXP209 and use it
- If both AXP209 and settings.yaml is empty then use the actual bt address and write it settings and axp209
- BUT if ForceBTAddress: true in settings.yaml then use that bt address and write it to AP209
-
 
 - Should we change to not retry, or limit retries to configure SI-USB as two-way when it fails?
 - Variable number of retries of Lora messages? Retry until new message arrive?
@@ -52,6 +42,7 @@ App
 
 Done
 ----
+x set unique btaddress if required / save it in file system and in axp209 to keep it persistent
 x add rtc_pcf8563 line to /etc/modules
 x Turn off the old red status LED and use the yellow led on the nanopineo air board instead
 x Send status with no of lora messages that hasn't been acked. In relay path no byte we can use 6 bits. Battery percent has 1 bit left
@@ -121,3 +112,15 @@ x ===> Seem to only be a problem when the antennaconnector is under water too, s
 x      Even though, change the resistor  from 1K to 24Kohm
 
 Ack could include request to resend missed messages. Good idea? Or just a resend adapter fetching from failed messages?
+
+
+
+- BT address 6 bytes: REG 04-0FH: Data Cache
+ hciconfig hci0 down
+ sudo btmgmt public-addr B0:02:47:00:D7:6D
+ hciconfig hci0 up
+In startup script check AXP209 for bt address, then check settings.yaml and actual bt address.
+ If AXP209 has address then use it and put it in settings
+ If AXP209 is empty but settings.yaml has then write it to AXP209 and use it
+ If both AXP209 and settings.yaml is empty then use the actual bt address and write it settings and axp209
+ BUT if ForceBTAddress: true in settings.yaml then use that bt address and write it to AP209
